Fixed 100vh issue with scrollbar

--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -1,6 +1,5 @@
 mat-sidenav-container {
-  height: 100%;
-
+  height: 90%;
   mat-sidenav {
     background-color: #F1F4FF;
 
