--- a/src/app/matrix-view/matrix-view.component.scss
+++ b/src/app/matrix-view/matrix-view.component.scss
@@ -5,6 +5,7 @@
 
 .container-fluid {
   height: 100%;
+  overflow: hidden;
 }
 
 .grid-container {
